--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -3,3 +3,12 @@
   apt: name=nginx state=present update_cache=yes
 - name: start nginx
   service: name=nginx state=started
+- name: Test for running nginx
+  shell: ps axuf|grep 'nginx'|grep -v "grep" | tr -d "\n" | cat
+  register: test_running_nginx
+  changed_when: False
+  tags: restart-nginx
+- name: Restart nginx
+  service: name=nginx state=restarted
+  when: test_running_nginx.stdout != ""
+  tags: restart-nginx
